--- a/xprof/tally_utils.h.erb
+++ b/xprof/tally_utils.h.erb
@@ -1,3 +1,5 @@
+#pragma once
+
 #include <string>
 #include <iomanip>
 #include <climits>
@@ -7,147 +9,47 @@
 #include <algorithm>
 #include <set>
 
-#include "babeltrace2/babeltrace.h"
-
-typedef intptr_t    process_id_t;
-typedef uintptr_t   thread_id_t;
-typedef std::string hostname_t;
-typedef std::string thapi_function_name;
-typedef uintptr_t   thapi_device_id;
-
-<%# Represent a device and a sub device %>
-typedef std::tuple<thapi_device_id, thapi_device_id> dsd_t;
-
-<%# Represent a start and a timestamp %>
-typedef std::tuple<thapi_function_name, size_t> fn_ts_t;
-typedef std::tuple<thread_id_t, thapi_function_name, size_t> tfn_ts_t;
-
-typedef std::tuple<hostname_t, process_id_t> hp_t;
-typedef std::tuple<hostname_t, process_id_t, thread_id_t> hpt_t;
-typedef std::tuple<hostname_t, process_id_t, thread_id_t, thapi_function_name> hpt_function_name_t;
-typedef std::tuple<thread_id_t, thapi_function_name> t_function_name_t;
-typedef std::tuple<hostname_t, process_id_t, thread_id_t, thapi_device_id, thapi_device_id> hpt_dsd_t;
-typedef std::tuple<hostname_t, process_id_t, thread_id_t, thapi_device_id, thapi_device_id, thapi_function_name> hpt_device_function_name_t;
-typedef std::tuple<hostname_t, process_id_t, thapi_device_id> hp_device_t;
-typedef std::tuple<hostname_t, process_id_t, thapi_device_id, thapi_device_id> hp_dsd_t;
-
-typedef std::tuple<hostname_t, process_id_t, cl_command_queue> hp_command_queue_t;
-typedef std::tuple<hostname_t, process_id_t, cl_event> hp_event_t;
-typedef std::tuple<hostname_t, process_id_t, cl_kernel> hp_kernel_t;
-typedef std::tuple<uint64_t, uint64_t> sd_t; // Start, Duration
-
-// https://stackoverflow.com/questions/7110301/generic-hash-for-tuples-in-unordered-map-unordered-set
-// Hash of std tuple
-namespace std{
-    namespace
-    {
-        // Code from boost
-        // Reciprocal of the golden ratio helps spread entropy
-        //     and handles duplicates.
-        // See Mike Seymour in magic-numbers-in-boosthash-combine:
-        //     https://stackoverflow.com/questions/4948780
-        template <class T>
-        inline void hash_combine(std::size_t& seed, T const& v)
-        {
-            seed ^= hash<T>()(v) + 0x9e3779b9 + (seed<<6) + (seed>>2);
-        }
-
-        // Recursive template code derived from Matthieu M.
-        template <class Tuple, size_t Index = std::tuple_size<Tuple>::value - 1>
-        struct HashValueImpl
-        {
-          static void apply(size_t& seed, Tuple const& tuple)
-          {
-            HashValueImpl<Tuple, Index-1>::apply(seed, tuple);
-            hash_combine(seed, get<Index>(tuple));
-          }
-        };
-
-        template <class Tuple>
-        struct HashValueImpl<Tuple,0>
-        {
-          static void apply(size_t& seed, Tuple const& tuple)
-          {
-            hash_combine(seed, get<0>(tuple));
-          }
-        };
-    }
-
-    template <typename ... TT>
-    struct hash<std::tuple<TT...>>
-    {
-        size_t
-        operator()(std::tuple<TT...> const& tt) const
-        {
-            size_t seed = 0;
-            HashValueImpl<std::tuple<TT...> >::apply(seed, tt);
-            return seed;
-        }
-
-    };
-}
-
-/*
-Utils function
-*/
-const hostname_t borrow_hostname(const bt_event *event){
-    const bt_stream *stream = bt_event_borrow_stream_const(event);
-    const bt_trace *trace = bt_stream_borrow_trace_const(stream);
-    const bt_value *host_name_str = bt_trace_borrow_environment_entry_value_by_name_const(trace, "hostname");
-    return  bt_value_string_get(host_name_str);
-}
-
-process_id_t borrow_process_id(const bt_event *event){
-    const bt_field *common_context_field = bt_event_borrow_common_context_field_const(event);
-    const bt_field *field = bt_field_structure_borrow_member_field_by_index_const(common_context_field, 0);
-    return bt_field_integer_signed_get_value(field);
-}
-
-thread_id_t borrow_thread_id(const bt_event *event){
-    const bt_field *common_context_field = bt_event_borrow_common_context_field_const(event);
-    const bt_field *field = bt_field_structure_borrow_member_field_by_index_const(common_context_field, 1);
-    return bt_field_integer_unsigned_get_value(field);
-}
+#include "xprof_utils.h"
 
 template <typename T>
 std::string to_string_with_precision(const T a_value, const std::string extension, const int n = 2)
 {
-    std::ostringstream out;
-    out.precision(n);
-    out << std::fixed << a_value << extension;
-    return out.str();
+   std::ostringstream out;
+   out.precision(n);
+   out << std::fixed << a_value << extension;
+   return out.str();
 }
 
 template <typename T>
 std::string format_byte(const T duration) {
-<%[  ['TB',  '1e+12'],
+<%[  ['TB', '1e+12'],
      ['GB', '1e+9'],
-     ['MB',   '1e+6'],
-     ['kB',   '1e+3'],
+     ['MB', '1e+6'],
+     ['kB', '1e+3'],
      ['B', '1']].each do | unit, factor |  %>
-    const double <%= unit %> = duration / <%= factor %>;
-    if (<%= unit %> >= 1.) {
-        return  to_string_with_precision(<%= unit %>, "<%= unit %>");
-    }
+   const double <%= unit %> = duration / <%= factor %>;
+   if (<%= unit %> >= 1.) {
+      return to_string_with_precision(<%= unit %>, "<%= unit %>");
+   }
 <% end %>
-    return "";
+   return "";
 }
 
 
 template <typename T>
 std::string format_time(const T duration) {
-<% [['h',  '3.6e+12'],
+<% [['h', '3.6e+12'],
     ['min', '6e+10'],
     ['s', '1e+9'],
     ['ms', '1e+6'],
     ['us', '1e+3'],
     ['ns', '1']].each do | unit, factor |  %>
-    const double <%= unit %> = duration / <%= factor %>;
-    if (<%= unit %> >= 1.) {
-        return  to_string_with_precision(<%= unit %>, "<%= unit %>");
-    }
+   const double <%= unit %> = duration / <%= factor %>;
+   if (<%= unit %> >= 1.) {
+      return to_string_with_precision(<%= unit %>, "<%= unit %>");
+   }
 <% end %>
-    return "";
+   return "";
 }
 
 /*
@@ -155,25 +57,21 @@ Class for time
  */
 
 struct StatIprof_string {
-    std::string time;
-    std::string time_ratio;
-    std::string count;
-    std::string avg;
-    std::string min;
-    std::string max;
-    std::string error;
+   std::string time;
+   std::string time_ratio;
+   std::string count;
+   std::string avg;
+   std::string min;
+   std::string max;
+   std::string error;
 };
 
 class StatIprof {
-    uint64_t _start;
+   uint64_t _start;
 
   public:
-    uint64_t _total_time{1};
-    void start(const int64_t);
-    void stop(const int64_t);
-    void delta(const uint64_t);
+    void delta(const uint64_t, const bool);
     void merge(StatIprof);
-    void set_error(void);
     StatIprof_string to_string(const uint64_t);
 
     //Used in merge
@@ -181,33 +79,19 @@ class StatIprof {
     uint64_t _min{ULONG_MAX};
     uint64_t _max{0};
     uint64_t _time{0};
-    bool _finished{true};
     uint64_t _error{0};
     
 };
 
-void StatIprof::start(const int64_t start) {
-   _start  = start;
-   _finished = false;
-}
-
-void StatIprof::stop(const int64_t stop) {
-   const uint64_t  delta = stop - _start;
+void StatIprof::delta(const uint64_t delta,const bool error) {
    _min = std::min(_min,delta);
    _max = std::max(_max,delta);
    _count++;
+   // total can overflow. Need to handle that correctly at some point...
    _time += delta;
-   _finished = true;
-}
-
-void StatIprof::set_error() {
-    _error++;
-}
-void StatIprof::delta(const uint64_t delta) {
-   _min = std::min(_min,delta);
-   _max = std::max(_max,delta);
-   _count++;
-   _time += delta;
+   if (error) {
+       _error += 1;
+   }
 }
 
 void StatIprof::merge(StatIprof st) {
@@ -216,7 +100,6 @@ void StatIprof::merge(StatIprof st) {
    // total can overflow. Need to handle that correctly at some point...
    _count += st._count;
    _time += st._time;
-   _finished = _finished && st._finished;
    _error += st._error;
 }
 
@@ -237,23 +120,6 @@ class <%= n %>: public StatIprof {
 };
 <% end %>
 
-
-<%# Glolbal variable %>
-std::unordered_map<hpt_device_function_name_t, StatTime> device_id_result;
-std::unordered_map<hpt_function_name_t, StatTime> api_call;
-std::unordered_map<hpt_function_name_t, StatByte> memory_trafic;
-std::unordered_map<hp_device_t, std::string> device_to_name;
-std::unordered_map<hp_device_t, thapi_device_id> device_to_rootdevice;
-
-std::unordered_map<hpt_t, thapi_device_id> start_device;
-std::unordered_map<hpt_t, thapi_function_name> profiled_function_name;
-
-
-std::unordered_map<hpt_t, fn_ts_t> profiled_function_name_and_ts;
-
-
-
-std::unordered_map<hpt_function_name_t, dsd_t> function_name_to_dsd;
 <%#
    _
   |_) ._ o ._ _|_    /\  ._ ._ _.
@@ -265,7 +131,7 @@ std::unordered_map<hpt_function_name_t, dsd_t> function_name_to_dsd;
 <% d_headers = [ ["StatTime","format_time",  [ 'Name', 'Time', 'Time(%)', 'Calls', 'Average', 'Min', 'Max', 'Failed'] ],
                  ["StatByte", "format_byte", [ 'Name', 'Byte', 'Byte(%)', 'Calls', 'Average', 'Min', 'Max', 'Failed'] ] ]  %>
 
- <% d_headers.each do | main_type, main_function, l_headers | %>
+  <% d_headers.each do | main_type, main_function, l_headers | %>
 void print_array(std::unordered_map<thapi_function_name, <%= main_type %> > aggregated, std::string header, unsigned int _print_error= 0) {
     <%# print_error = 0 -> Never print error
                     = 1 -> Print only when error
@@ -368,24 +234,24 @@ void print_array(std::unordered_map<thapi_function_name, <%= main_type %> > aggr
                                   /
 %>
 
-   <% output = [ ['StatTime', 'api_call', 'API calls', '1', 'hpt_t',
+   <% output = [ ['StatTime', 'std::unordered_map<hpt_function_name_t, StatTime>', 'api_call', 'API calls', '1', 'hpt_t',
                     [ ['hostname_t','Hostnames','Hostname'],
                       ['process_id_t','Processes','Process'],
                       ['thread_id_t','Threads','Thread'] ] ],
-                 ['StatTime', 'device_id_result','Device profiling', '0', 'hpt_dsd_t',
+   ['StatTime', 'std::unordered_map<hpt_device_function_name_t, StatTime>', 'device_id_result','Device profiling', '0', 'hpt_dsd_t',
                     [ ['hostname_t','Hostnames','Hostname'],
                       ['hp_t','Processes','Process'],
                       ['hpt_t','Threads','Thread'] ,
                       ['hp_device_t','Device pointers','Device'],
                       ['hp_dsd_t','SubDevice pointers','SubDevice'] ] ],
-                 ['StatByte', 'memory_trafic', 'Explicit memory trafic', '0', 'hpt_t',
+   ['StatByte', 'std::unordered_map<hpt_function_name_t, StatByte>', 'memory_trafic', 'Explicit memory trafic', '0', 'hpt_t',
                     [ ['hostname_t','Hostnames','Hostname'],
                       ['process_id_t','Processes','Process'],
                       ['thread_id_t','Threads','Thread'] ] ],
    ] %>
 
-<% output.each do |main_type, result,header, error, type, var| %>
-void print_compact_<%= result %>(){
+<% output.each do |main_type, tuple_typle, result,header, error, type, var| %>
+    void print_compact_<%= result %>( <%=tuple_typle %>   <%=result%> ){
    <% var.each do |t,n,_ | %>
    std::set<<%= t %>> s_<%= n.gsub(' ','_') %>;
     <% end %>
@@ -395,10 +261,6 @@ void print_compact_<%= result %>(){
    {
        auto [ <%= var.map{ |t,n| n.gsub(' ','_')}.join(',') %>,function_name ] = element.first;
        const <%= main_type %> time = element.second;
-        if (!time._finished) {
-            std::cerr << "Warning: " << function_name << " didn't finish! Therefore it will not be accounted for." << std::endl;
-            continue;
-        }
     <% if type == "hpt_dsd_t" %>
        s_Hostnames.insert(hostname_t{Hostnames} ) ;
        s_Processes.insert(hp_t{Hostnames,Processes} ) ;
@@ -434,33 +296,16 @@ void print_compact_<%= result %>(){
    std::cout << std::endl;
 };
 
-
-   <% output = [ ['StatTime', 'api_call', 'API calls', '1', 'hpt_t',
-                    [ ['hostname_t','Hostnames','Hostname'],
-                      ['process_id_t','Processes','Process'],
-                      ['thread_id_t','Threads','Thread'] ] ],
-                 ['StatTime', 'device_id_result','Device profiling', '0', 'hpt_dsd_t',
-                    [ ['hostname_t','Hostnames','Hostname'],
-                      ['process_id_t','Processes','Process'],
-                      ['thread_id_t','Threads','Thread'] ,
-                      ['thapi_device_id','Device pointers','Device'],
-                      ['thapi_device_id','SubDevice pointers','SubDevice'] ] ],
-                 ['StatByte', 'memory_trafic', 'Explicit memory trafic', '0', 'hpt_t',
-                    [ ['hostname_t','Hostnames','Hostname'],
-                      ['process_id_t','Processes','Process'],
-                      ['thread_id_t','Threads','Thread'] ] ],
-   ] %>
-
-void print_extented_<%= result %>(){
+<% if result == 'device_id_result' %>
+    void print_extented_<%= result %>(  <%=tuple_typle %>   <%=result%>, std::unordered_map<hp_device_t, std::string> device_to_name ){
+<% else %>
+void print_extented_<%= result %>(  <%=tuple_typle %>   <%=result%> ){
+<% end  %>
 
   <% args = var.map{ |t,_,n| n}.join(',') %>
   std::unordered_map< <%= type %>, std::unordered_map<thapi_function_name, <%= main_type %> >> d;
   for (auto [s, time]: <%= result %> ) {
     auto [<%= args %>, function_name] = s;
-    if (!time._finished) {
-        std::cerr << "Warning: " << function_name << " didn't finish! Therefore it will not be accounted for." << std::endl;
-        continue;
-   }
     d[ <%= type %>( <%= args %> )][function_name].merge(time);
   }
 
@@ -481,9 +326,9 @@ void print_extented_<%= result %>(){
         << std::hex << std::showbase << std::internal << std::setfill('0')
         <% end %>
         << <%= n %>
-            <% if n =='Device' and result == 'device_id_result' %>
+        <% if n =='Device' and result == 'device_id_result' %>
         <<  " (" << device_to_name[hp_device_t(Hostname,Process,Device)] << ")"
-            <% end %>
+        <% end %>
     <% end %>
         << std::endl;
     <% if type == "hpt_dsd_t" %>
