--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -20,6 +20,30 @@ void *init_clinterval_callbacks_state() {
  |  | (/_ _> _> (_| (_| (/_   \_ | (/_ (_|  |_ | (_) | | 
                      _|                                  
 %>
+/*
+Utils function
+*/
+static
+const hostname_t borrow_hostname(const bt_event *event){
+    const bt_stream *stream = bt_event_borrow_stream_const(event);
+    const bt_trace *trace = bt_stream_borrow_trace_const(stream);
+    const bt_value *host_name_str = bt_trace_borrow_environment_entry_value_by_name_const(trace, "hostname");
+    return  bt_value_string_get(host_name_str);
+}
+
+static
+process_id_t borrow_process_id(const bt_event *event){
+    const bt_field *common_context_field = bt_event_borrow_common_context_field_const(event);
+    const bt_field *field = bt_field_structure_borrow_member_field_by_index_const(common_context_field, 0);
+    return bt_field_integer_signed_get_value(field);
+}
+
+static
+thread_id_t borrow_thread_id(const bt_event *event){
+    const bt_field *common_context_field = bt_event_borrow_common_context_field_const(event);
+    const bt_field *field = bt_field_structure_borrow_member_field_by_index_const(common_context_field, 1);
+    return bt_field_integer_unsigned_get_value(field);
+}
 
 static void create_and_enqueue_host_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name, 
                                      const uint64_t ts, const uint64_t duration, const bool err) {
