--- a/xprof/tally_utils.hpp.erb
+++ b/xprof/tally_utils.hpp.erb
@@ -9,7 +9,7 @@
 #include <algorithm>
 #include <set>
 
-#include "xprof_utils.h"
+#include "xprof_utils.hpp"
 
 template <typename T>
 std::string to_string_with_precision(const T a_value, const std::string extension, const int n = 2)
